Fixes spacing issues with nav bar

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,7 +3,7 @@
 #root {
   height: 100%;
   width: 100%;
-  display: flex;
+  overflow: auto;
 }
 
 body {
@@ -17,4 +17,5 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
+  overflow: auto;
 }
